Reformated entire src (#276)