@@ -2,15 +2,14 @@ package stud.ntnu.krisefikser.user.controller;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -28,8 +27,7 @@ import stud.ntnu.krisefikser.user.exception.UnauthorizedAccessException;
 import stud.ntnu.krisefikser.user.service.UserService;
 
 /**
- * REST controller for managing users in the system. Provides endpoints for user
- * management
+ * REST controller for managing users in the system. Provides endpoints for user management
  * operations.
  *
  * @since 1.0
@@ -46,22 +44,37 @@ public class UserController {
    */
   private final UserService userService;
 
+  /**
+   * Retrieves a user by their ID.
+   *
+   * @return the user with the specified ID
+   */
   @Operation(summary = "Get all users", description = "Retrieves a list of all users in the system")
   @ApiResponses(value = {
-      @ApiResponse(responseCode = "200", description = "Successfully retrieved users", content = @Content(mediaType = "application/json", array = @ArraySchema(items = @Schema(implementation = UserResponse.class)))),
+      @ApiResponse(responseCode = "200", description = "Successfully retrieved users",
+          content = @Content(mediaType = "application/json",
+              array = @ArraySchema(schema = @Schema(implementation = UserResponse.class)))),
       @ApiResponse(responseCode = "401", description = "Not authenticated")
   })
   @GetMapping
   public ResponseEntity<List<UserResponse>> getAllUsers() {
     List<UserResponse> users = userService.getAllUsers().stream()
         .map(User::toDto)
-        .collect(Collectors.toList());
+        .toList();
     return ResponseEntity.ok(users);
   }
 
+  /**
+   * Retrieves a user by their ID.
+   *
+   * @param userId the ID of the user to retrieve
+   * @return the user with the specified ID
+   */
   @Operation(summary = "Update user", description = "Updates an existing user's information")
   @ApiResponses(value = {
-      @ApiResponse(responseCode = "200", description = "Successfully updated user", content = @Content(mediaType = "application/json", schema = @Schema(implementation = UserResponse.class))),
+      @ApiResponse(responseCode = "200", description = "Successfully updated user",
+          content = @Content(mediaType = "application/json",
+              schema = @Schema(implementation = UserResponse.class))),
       @ApiResponse(responseCode = "400", description = "Invalid user data"),
       @ApiResponse(responseCode = "401", description = "Not authenticated"),
       @ApiResponse(responseCode = "403", description = "Not authorized to update this user"),
@@ -78,6 +91,12 @@ public class UserController {
     return ResponseEntity.ok(updatedUser.toDto());
   }
 
+  /**
+   * Deletes a user from the system.
+   *
+   * @param userId the ID of the user to delete
+   * @return a response entity indicating the result of the operation
+   */
   @Operation(summary = "Delete user", description = "Deletes a user from the system")
   @ApiResponses(value = {
       @ApiResponse(responseCode = "200", description = "Successfully deleted user"),
